[tool.poetry]
name = "vizro-integration"
version = "0.1.0"
description = ""
authors = ["Kacper Rogala <rogala.kacper6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vizro = "^0.1.20"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
